2005-03-26 01:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Correction to previous commit.  Compile palettes
	after GormLib/InterfaceBuilder library.

2005-03-26 01:37 Gregory John Casamento <greg_casamento@yahoo.com>

	These changes allow the build to work correctly on UNIX and
	preserve Nicola's changes for mingw.  This is temporary until
	the build is reorganized.
	* GNUmakefile: Added Palettes back to subprojects back in with 
	conditional for mingw.
	* GNUmakefile.postamble: Added conditional for targets so that
	they will work as expected on UNIX.

2005-03-22 04:30 Nicola Pero <n.pero@mi.flashnet.it>

	With these changes, Gorm builds and runs out-of-the-box on Mingw32
	with latest gnustep-make.
	* GNUmakefile (SUBPROJECTS): Do not build Palettes as a subproject
	because they depend on Gorm.app having been built first.
	* GNUmakefile.postamble (after-all): Added rule to manually
	build Palettes after Gorm.app.
	(after-clean): Same change.
	(after-distclean): Same change.
	* Palettes/0Menus/GNUmakefile.preamble: Link ../../Gorm.app/Gorm.exe.a
	on Mingw.
	* Palettes/1Windows/GNUmakefile.preamble: Same change.
	* Palettes/2Controls/GNUmakefile.preamble: Same change.
	* Palettes/3Containers/GNUmakefile.preamble: Same change.
	* Palettes/4Data/GNUmakefile.preamble: Same change.
	
2005-03-21 23:30 Nicola Pero <n.pero@mi.flashnet.it>

	* GormLib/IBSystem.h: Fixed windows32 check for building
	the library.  The library name is libGorm, not libGormLib!
	Also, simply use extern when exporting on Mingw.
	* GormLib/GNUmakefile.preamble: Removed special linking
	additions on Mingw, not needed.
	* Palettes/0Menus/GNUmakefile.preamble: Use ADDITIONAL_GUI_LIBS,
	not xxx_LIBRARIES_DEPEND_UPON, to link libGorm on Mingw.
	* Palettes/1Windows/GNUmakefile.preamble: Same change.
	* Palettes/2Controls/GNUmakefile.preamble: Same change.
	* Palettes/3Containers/GNUmakefile.preamble: Same change.
	* Palettes/4Data/GNUmakefile.preamble: Same change.	
	